@@ -307,6 +307,13 @@ void MGL_EXPORT mgl_data_cosfft_(uintptr_t *dat, const char *dir,int);
 void MGL_EXPORT mgl_data_fill_sample(HMDT dat, const char *how);
 void MGL_EXPORT mgl_data_fill_sample_(uintptr_t *dat, const char *how,int);
 
+/// Allocate and prepare data for Fourier transform by nthr threads
+MGL_EXPORT void *mgl_fft_alloc(long n, void **space, long nthr);
+/// Free data for Fourier transform
+void MGL_EXPORT mgl_fft_free(void *wt, void **ws, long nthr);
+/// Make Fourier transform of data x of size n and step s between points
+void MGL_EXPORT mgl_fft(double *x, long s, long n, const void *wt, void *ws, bool inv);
+
 /// Interpolate by cubic spline the data to given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
 mreal MGL_EXPORT mgl_data_spline(HCDT dat, mreal x,mreal y,mreal z);
 mreal MGL_EXPORT mgl_data_spline_(uintptr_t *dat, mreal *x,mreal *y,mreal *z);
