@@ -34,14 +34,6 @@ A. Paper about MathGL!!!
 
 15. Docs about SetAutoRanges()
 
-16. Save should save Id too.
-
-17. Check FFT, Envelope, SinFFT, CosFFT, Hankel (+complex)
-
-18. Check if Read() correctly handle 1.#QNAN values in file
-
-19. Draw only one ticks if axis at an edge ???
-
 20. JS rotation in Firefox
 
 21. Docs about SetOriginTick()
